# mysqladm-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  create-deb.sh  deny.toml  example-config.toml  flake.nix
.gitea/workflows/: build-and-test.yml  build.yml  publish-deb.yml
assets/: example-config.toml
assets/debian/: config.toml  group_denylist.txt
assets/systemd/: muscl.service  muscl.socket  mysqladm.service  mysqladm.socket
docs/: compiling.md  development.md  installation.md  mysql-admutils-compatibility.md  nixos.md  suid-sgid-mode.md
examples/auth_daemon_python/: muscl-auth-daemon.service  muscl-auth-daemon.socket  muscl_auth_daemon.py
nix/: coverage.nix  debian-vm-configuration.nix  default.nix  module.nix
nix/nixos-configurations/: vm-suid.nix  vm.nix
scripts/: create-deb.sh  download-and-upload-debs.sh
src/: authenticated_unix_socket.rs  cli.rs  client.rs  core.rs  database_command.rs  lib.rs  main.rs  server.rs  user_command.rs
src/cli/: common.rs  database_command.rs  mysql_admutils_compatibility.rs  other_command.rs  user_command.rs
src/cli/mysql_admutils_compatibility/: common.rs  mysql_dbadm.rs  mysql_useradm.rs
src/client/: command.rs  commands.rs  mysql_admutils_compatibility.rs
src/client/commands/: check_auth.rs  create_db.rs  create_user.rs  drop_db.rs  drop_user.rs  edit_db_privs.rs  edit_privs.rs  lock_user.rs  passwd_user.rs  show_db.rs  show_db_privs.rs  show_privs.rs  show_user.rs  unlock_user.rs
src/client/mysql_admutils_compatibility/: common.rs  error_messages.rs  mysql_dbadm.rs  mysql_useradm.rs
src/core/: bootstrap.rs  common.rs  completion.rs  config.rs  database_operations.rs  database_privilege_operations.rs  database_privileges.rs  protocol.rs  types.rs  user_operations.rs
src/core/bootstrap/: authenticated_unix_socket.rs
src/core/completion/: mysql_database_completer.rs  mysql_user_completer.rs  prefix_completer.rs
src/core/database_privileges/: base.rs  cli.rs  diff.rs  editor.rs
src/core/protocol/: commands.rs  request_response.rs  request_validation.rs  server_responses.rs
src/core/protocol/commands/: check_authorization.rs  complete_database_name.rs  complete_user_name.rs  create_databases.rs  create_users.rs  drop_databases.rs  drop_users.rs  list_all_databases.rs  list_all_privileges.rs  list_all_users.rs  list_databases.rs  list_privileges.rs  list_users.rs  list_valid_name_prefixes.rs  lock_users.rs  modify_privileges.rs  passwd_user.rs  unlock_users.rs
src/entrypoints/: muscl.rs  muscl_server.rs
src/server/: authorization.rs  command.rs  common.rs  config.rs  input_sanitization.rs  landlock.rs  server_loop.rs  session_handler.rs  sql.rs  supervisor.rs
src/server/sql/: database_operations.rs  database_privilege_operations.rs  user_operations.rs
