[package]
name = "mysqladm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-bincode = "0.8.0"
bincode = "2.0.1"
clap = { version = "4.5.41", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
clap_complete = "4.5.55"
derive_more = { version = "2.0.1", features = ["display", "error"] }
dialoguer = "0.11.0"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.27"
nix = { version = "0.30.1", features = ["fs", "process", "socket", "user"] }
prettytable = "0.10.0"
rand = "0.9.1"
ratatui = { version = "0.29.0", optional = true }
sd-notify = "0.4.5"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "tls-rustls"] }
systemd-journal-logger = "2.2.2"
tokio = { version = "1.46.1", features = ["rt", "macros"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"] }
toml = "0.8.23"
uuid = { version = "1.17.0", features = ["v4"] }

[features]
default = ["mysql-admutils-compatibility"]
tui = ["dep:ratatui"]
mysql-admutils-compatibility = []

[[bin]]
name = "mysqladm"
bench = false
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[build-dependencies]
anyhow = "1.0.98"

[dev-dependencies]
regex = "1.11.1"
