[package]
name = "mysqladm-rs"
version = "0.1.0"
edition = "2021"
license = "BSD3"
authors = [
  "oysteikt@pvv.ntnu.no",
  "felixalb@pvv.ntnu.no",
]
repository = "https://git.pvv.ntnu.no/Projects/mysqladm-rs"
documentation = "https://pages.pvv.ntnu.no/Projects/mysqladm-rs/main/docs/mysqladm/"
description = "A command-line utility for MySQL administration for non-admin users"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["mysql", "cli", "administration"]
readme = "README.md"
autobins = false
autolib = false

[dependencies]
anyhow = "1.0.100"
async-bincode = "0.8.0"
bincode = "2.0.1"
clap = { version = "4.5.51", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.60"
derive_more = { version = "2.0.1", features = ["display", "error"] }
dialoguer = "0.12.0"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
indoc = "2.0.7"
itertools = "0.14.0"
log = "0.4.28"
nix = { version = "0.30.1", features = ["fs", "process", "socket", "user"] }
prettytable = "0.10.0"
rand = "0.9.2"
ratatui = { version = "0.29.0", optional = true }
sd-notify = "0.4.5"
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "tls-rustls"] }
systemd-journal-logger = "2.2.2"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["codec"] }
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = ["mysql-admutils-compatibility"]
tui = ["dep:ratatui"]
mysql-admutils-compatibility = []

[[bin]]
name = "mysqladm"
bench = false
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[build-dependencies]
anyhow = "1.0.100"

[dev-dependencies]
regex = "1.12.2"
